added sample plots

--- a/netflix_eda.ipynb
+++ b/netflix_eda.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Netflix Shows and Movies - Exploratory Analysis\n",
-    "#### The dataset used here contains information such as rear added, cast, director, TV-ratings, etc of the content on netflix from 2008 to 2019.\n",
+    "#### The dataset used here contains information such as date added, cast, director, TV-ratings, etc of the content on netflix from 2008 to 2019.\n",
     "\n",
     "Immediate scope of this work: \n",
     "* Brush up on basic plotly vizualizations.\n",
